[project]
name = "test"
version = "0.1.0"
description = "GitHub App Token injector Renovate"
readme = "README.md"
authors = [
    { name = "Nelson Dane" }
]
urls = { "Homepage" = "https://github.com/NelsonDane/renovate-token-injector" }

requires-python = "==3.14.*"
dependencies = [
    "jwt>=1.4.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.13.2",
    "types-requests>=2.32.0.20241016",
]

# Linting and Style
[tool.ruff]
target-version = "py314"
extend = "./styles/ruff.toml"
ignore = [
    "T201", # Allow prints
]
